@@ -38,6 +38,51 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Comparator
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Random
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
@@ -526,10 +571,16 @@ name|isDirectory
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|List
+argument_list|<
 name|File
-index|[]
+argument_list|>
 name|xmlFiles
 init|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
 name|exampleDocsDir
 operator|.
 name|listFiles
@@ -562,7 +613,69 @@ return|;
 block|}
 block|}
 argument_list|)
+argument_list|)
 decl_stmt|;
+comment|// force a deterministic random ordering of the files so seeds reproduce regardless of platform/filesystem
+name|Collections
+operator|.
+name|sort
+argument_list|(
+name|xmlFiles
+argument_list|,
+operator|new
+name|Comparator
+argument_list|<
+name|File
+argument_list|>
+argument_list|()
+block|{
+specifier|public
+name|int
+name|compare
+parameter_list|(
+name|File
+name|o1
+parameter_list|,
+name|File
+name|o2
+parameter_list|)
+block|{
+comment|// don't rely on File.compareTo, it's behavior varies by OS
+return|return
+name|o1
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|compareTo
+argument_list|(
+name|o2
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+name|Collections
+operator|.
+name|shuffle
+argument_list|(
+name|xmlFiles
+argument_list|,
+operator|new
+name|Random
+argument_list|(
+name|random
+argument_list|()
+operator|.
+name|nextLong
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 comment|// if you add/remove example XML docs, you'll have to fix these expected values
 name|int
 name|expectedXmlFileCount
@@ -574,20 +687,21 @@ name|expectedXmlDocCount
 init|=
 literal|32
 decl_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
-literal|"Expected 14 example XML files in "
+literal|"Unexpected # of example XML files in "
 operator|+
 name|exampleDocsDir
 operator|.
 name|getAbsolutePath
 argument_list|()
 argument_list|,
+name|expectedXmlFileCount
+argument_list|,
 name|xmlFiles
 operator|.
-name|length
-operator|==
-name|expectedXmlFileCount
+name|size
+argument_list|()
 argument_list|)
 expr_stmt|;
 for|for
@@ -676,19 +790,13 @@ operator|.
 name|getNumFound
 argument_list|()
 decl_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
-literal|"Expected "
-operator|+
+literal|"*:* found unexpected number of documents"
+argument_list|,
 name|expectedXmlDocCount
-operator|+
-literal|" docs but *:* found "
-operator|+
-name|numFound
 argument_list|,
 name|numFound
-operator|==
-name|expectedXmlDocCount
 argument_list|)
 expr_stmt|;
 name|log
