@@ -25,7 +25,7 @@
   <field name="cat">electronics</field>
   <field name="cat">memory</field>
   <field name="features">CAS latency 2,	2-3-3-6 timing, 2.75v, unbuffered, heat-spreader</field>
-  <field name="price">185</field>
+  <field name="price">185.00</field>
   <field name="popularity">5</field>
   <field name="inStock">true</field>
   <!-- San Francisco store -->
